--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -9,7 +9,7 @@
 	position: sticky !important;
 	z-index: 1;
 	top: 0;
-	@include theme-aware('background', 'color-background');
+	@include theme-aware('background', 'body-background');
 
 	.st-Loader {
 		height: 100vh;
@@ -34,7 +34,7 @@
 			position: absolute;
 			width: 10px;
 			height: 100%;
-			@include theme-aware('background', 'color-background');
+			@include theme-aware('background', 'body-background');
 		}
 
 		&:before {
