--- a/src/components/user/followers/Followers.scss
+++ b/src/components/user/followers/Followers.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-Followers {
 	&-info {
@@ -10,13 +11,13 @@
 		border-radius: 6px;
 
 		&:hover {
-			background-color: $color-white;
+			@include theme-aware('background-color', 'story-list-background-hover');
 		}
 
 		span {
 			font-weight: bold;
-			color: $color-grey-black;
 			font-size: 18px;
+			@include theme-aware('color', 'user-info-title');
 
 			&:last-child {
 				color: $color-grey-medium;
