--- a/src/components/user/pages/DraftStoriesPage.scss
+++ b/src/components/user/pages/DraftStoriesPage.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-DraftStoriesPage {
 	display: flex;
@@ -13,8 +14,6 @@
 		}
 
 		.st-StoryThumb {
-			background-color: $color-white;
-
 			&-cover {
 				.st-Image {
 					&-fallback {
@@ -39,13 +38,13 @@
 			margin-right: 16px;
 
 			> span {
-				color: $color-grey-black;
 				font-weight: 600;
 				cursor: pointer;
 				font-size: 14px;
 				padding: 0 15px 0 0;
 				margin-bottom: 12px;
 				text-transform: capitalize;
+				@include theme-aware('color', 'saved-story-color');
 			}
 
 			.st-NoStories {
