--- a/src/components/user/stories/DraftStories.scss
+++ b/src/components/user/stories/DraftStories.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-DraftStories {
 	display: flex;
@@ -6,8 +7,8 @@
 
 	> span {
 		font-weight: 600;
-		color: $color-grey-cream;
 		text-transform: uppercase;
+		@include theme-aware('color', 'saved-story-title');
 	}
 
 	&-pagination {
