--- a/src/components/user/stories/SavedStories.scss
+++ b/src/components/user/stories/SavedStories.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-SavedStories {
 	display: flex;
@@ -7,7 +8,7 @@
 	> span {
 		font-weight: 600;
 		text-transform: uppercase;
-		color: $color-grey-cream;
+		@include theme-aware('color', 'saved-story-title');
 	}
 
 	&-pagination {
