--- a/src/components/widgets/icon/Icon.scss
+++ b/src/components/widgets/icon/Icon.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-Icon {
 	display: flex;
@@ -6,5 +7,5 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
-	background: $color-grey-border;
+	@include theme-aware('background-color', 'icon-background');
 }
