--- a/src/components/widgets/image/Image.scss
+++ b/src/components/widgets/image/Image.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-Image {
 	&-fallback {
@@ -7,8 +8,8 @@
 		align-items: center;
 		justify-content: center;
 		background-color: transparent;
-		border: 1px solid $color-grey-border;
 		width: 100%;
 		height: 100%;
+		@include theme-aware('border', 'story-item-border');
 	}
 }
