--- a/src/components/widgets/input/FloatingInput.scss
+++ b/src/components/widgets/input/FloatingInput.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-FloatingInput {
 	display: flex;
@@ -6,13 +7,23 @@
 	min-height: 50px;
 
 	label {
-		color: $color-grey-medium;
+		@include theme-aware('color', 'default-picker-label');
 		font-size: 14px;
 		margin-bottom: 4px;
 	}
 
+	textarea,
+	input {
+		@include theme-aware('background', 'story-item-background');
+		@include theme-aware('color', 'story-item-username-color');
+		@include theme-aware('border', 'story-item-border');
+	}
+
+	textarea {
+		resize: none;
+	}
+
 	input {
 		height: 36px;
-		border: 1px solid $color-grey-border;
 	}
 }
