--- a/src/components/widgets/pickers/category/CategoryPicker.scss
+++ b/src/components/widgets/pickers/category/CategoryPicker.scss
@@ -1,4 +1,5 @@
 @import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-CategoryPicker {
 	min-width: 200px;
@@ -7,7 +8,7 @@
 	min-height: 50px;
 
 	label {
-		color: $color-grey-medium;
+		@include theme-aware('color', 'story-item-stats-color');
 		font-size: 14px;
 		margin-bottom: 4px;
 	}
@@ -24,6 +25,8 @@
 	.st-CategoryPicker__control {
 		height: 36px;
 		cursor: pointer;
+		@include theme-aware('background', 'story-item-background');
+		@include theme-aware('border', 'story-item-border');
 
 		&--menu-is-open,
 		&--is-focused {
