--- a/src/components/widgets/pickers/language/LanguagePicker.scss
+++ b/src/components/widgets/pickers/language/LanguagePicker.scss
@@ -1,4 +1,5 @@
 @import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-LanguagePicker {
 	min-width: 200px;
@@ -7,23 +8,34 @@
 	min-height: 50px;
 
 	label {
-		color: $color-grey-medium;
+		@include theme-aware('color', 'story-item-stats-color');
 		font-size: 14px;
 		margin-bottom: 4px;
 	}
 
-	.st-LanguagePicker__option {
+	&__option {
 		cursor: pointer;
 
 		&:hover,
 		&--is-focused {
 			background-color: $color-primary-light;
+			color: $color-grey-light;
 		}
 	}
 
-	.st-LanguagePicker__control {
+	&__single-value {
+		color: $color-grey-light;
+	}
+
+	&__placeholder {
+		font-size: 14px;
+	}
+
+	&__control {
 		height: 36px;
 		cursor: pointer;
+		@include theme-aware('background', 'story-item-background');
+		@include theme-aware('border', 'story-item-border');
 
 		&--menu-is-open,
 		&--is-focused {
