--- a/src/components/stories/widgets/page-picker/StoryPagePicker.scss
+++ b/src/components/stories/widgets/page-picker/StoryPagePicker.scss
@@ -19,6 +19,10 @@
 			text-decoration: underline;
 			cursor: pointer;
 		}
+
+		&:active {
+			@include theme-aware('background-color', 'default-picker-option-background');
+		}
 	}
 
 	&__control {
