--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 //BOX-SHADOW
 
 $box-shadow-light: 2px 2px 12px rgba(35, 31, 26, 0.08);
+$box-shadow-drop: 2px 2px 12px rgba(35, 31, 26, 0.24);
 
 //STORY
 
