--- a/src/NotFound.scss
+++ b/src/NotFound.scss
@@ -53,15 +53,11 @@
 				font-family: $font-merriweather;
 				font-weight: 900;
 				font-size: 48px;
-				color: $color-primary-dark;
+				@include theme-aware('color', 'not-found-color');
 
 				@media (max-width: $breakpoint-sm) {
 					font-size: 32px;
 				}
-			}
-
-			&:nth-child(3) {
-				color: $color-grey-medium;
 			}
 		}
 
