--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -2,103 +2,55 @@
 @import 'styles/themes/mixins.scss';
 
 .st-Login {
-	display: flex !important;
-	align-items: center;
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
-	backdrop-filter: blur(10px);
+	width: $story-preview-width-medium;
+	box-shadow: $box-shadow-drop;
+	padding: 36px;
+	margin: 0 auto;
+	border-radius: 6px;
+
+	@media (max-width: $breakpoint-sm) {
+		width: $story-preview-width-small;
+	}
+
+	h4 {
+		font-family: $font-merriweather;
+		font-weight: 900;
+		font-size: 24px;
+		margin-bottom: 24px;
+		@include theme-aware('color', 'modal-title-color');
+	}
+
+	.st-FloatingInput {
+		&:nth-child(3) {
+			margin-bottom: 8px;
+		}
+	}
+
+	a {
+		font-size: 14px;
+		text-align: right;
+		font-weight: bold;
+
+		&:last-child {
+			text-align: left;
+		}
+	}
+
+	.st-IconButton {
+		margin: 15px 0;
+		min-height: 50px;
+
+		&-link {
+			display: flex;
+		}
+	}
 
 	&-divider {
 		text-align: center;
 		font-size: 14px;
 		color: $color-grey-medium;
-	}
-
-	.modal {
-		&-dialog {
-			max-width: unset;
-			width: 800px;
-
-			@media (max-width: $breakpoint-m) {
-				width: auto;
-			}
-		}
-
-		&-header {
-			border-bottom: none;
-			position: absolute;
-			align-self: flex-end;
-			z-index: 1;
-
-			.close {
-				outline: none;
-			}
-		}
-
-		&-body {
-			display: flex;
-			flex-direction: row;
-			padding: 0;
-			flex-grow: 1;
-			@include theme-aware('background-color', 'modal-background');
-
-			.st-Billboard {
-				height: auto;
-			}
-
-			form {
-				min-width: 320px;
-				flex-basis: 50%;
-				padding: 36px;
-				justify-content: center;
-				display: flex;
-				flex-direction: column;
-
-				@media (max-width: $breakpoint-sm) {
-					min-width: 100%;
-				}
-
-				h4 {
-					font-family: $font-merriweather;
-					font-weight: 900;
-					font-size: 24px;
-					margin-bottom: 24px;
-					@include theme-aware('color', 'modal-title-color');
-				}
-
-				.st-FloatingInput {
-					&:nth-child(3) {
-						margin-bottom: 8px;
-					}
-				}
-
-				a {
-					font-size: 14px;
-					text-align: right;
-					font-weight: bold;
-
-					&:last-child {
-						text-align: left;
-					}
-				}
-
-				.st-IconButton {
-					margin: 15px 0;
-					min-height: 50px;
-
-					&-link {
-						display: flex;
-					}
-				}
-			}
-
-			@media (max-width: $breakpoint-m) {
-				min-width: unset;
-				min-height: 500px;
-
-				.st-Billboard {
-					display: none;
-				}
-			}
-		}
 	}
 }
