--- a/src/components/user/followers/Followers.scss
+++ b/src/components/user/followers/Followers.scss
@@ -33,6 +33,7 @@
 		flex-direction: column;
 		max-height: 500px;
 		overflow-y: auto;
+		@include theme-aware('color', 'story-item-username-color');
 
 		&-item {
 			display: flex;
@@ -54,11 +55,11 @@
 			> span {
 				font-weight: bold;
 				font-family: $font-merriweather;
-				color: $color-grey-black;
 				text-overflow: ellipsis;
 				overflow: hidden;
 				white-space: nowrap;
 				max-width: 150px;
+				@include theme-aware('color', 'story-item-username-color');
 			}
 
 			.st-IconButton {
