--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,6 +19,8 @@ $color-primary-cream: #daba95;
 $color-primary-light: #faf5f0;
 
 $color-secondary-black: #231f1a;
+$color-secondary-black-grey-dark: #35393b;
+$color-secondary-black-grey: #4D5356;
 $color-secondary-black-cream: #34393d;
 $color-secondary-black-medium: #3a3e41;
 $color-secondary-black-light: #2e3336;
