--- a/src/components/stories/widgets/categories/Categories.scss
+++ b/src/components/stories/widgets/categories/Categories.scss
@@ -24,6 +24,20 @@
 
 	@media (max-width: $breakpoint-m) {
 		height: auto;
+
+		.nav-item {
+			&:nth-child(2) {
+				.nav-link {
+					padding-left: 0;
+				}
+			}
+
+			&:last-child {
+				.nav-link {
+					margin-right: 0;
+				}
+			}
+		}
 	}
 
 	@media (max-width: $breakpoint-sm) {
