--- a/src/components/widgets/icon/Icon.scss
+++ b/src/components/widgets/icon/Icon.scss
@@ -8,4 +8,10 @@
 	width: 100%;
 	height: 100%;
 	@include theme-aware('background-color', 'icon-background');
+
+	svg {
+		path {
+			@include theme-aware('fill', 'icon-color');
+		}
+	}
 }
