[UserSettings]: default theme changed to dark

--- a/src/components/widgets/text-editor/TextEditor.scss
+++ b/src/components/widgets/text-editor/TextEditor.scss
@@ -3,7 +3,7 @@
 
 .st-TextEditor {
 	font-family: $font-merriweather;
-	caret-color: $color-primary-dark;
+	@include theme-aware('caret-color', 'editor-caret-color');
 	@include theme-aware('color', 'viewer-color');
 
 	&-menu {
