--- a/src/views/stories/StoryItem.scss
+++ b/src/views/stories/StoryItem.scss
@@ -198,7 +198,7 @@
 					&:last-child {
 						margin-right: 0;
 						text-decoration: none;
-						cursor: alias;
+						cursor: default;
 					}
 				}
 			}
