added drawer, styleint ignore js files

--- a/src/components/nav/DesktopNav.scss
+++ b/src/components/nav/DesktopNav.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables.scss';
 @import 'styles/themes/mixins.scss';
 
-.st-Nav {
+.st-DesktopNav {
 	align-content: center;
 	height: 60px;
 	padding: 0 !important;
