lighthouse improvments, added missing propTypes, enabled propTypes check in eslint.config, added preview placeholder until image is loaded

--- a/src/views/user/UserAvatar.scss
+++ b/src/views/user/UserAvatar.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables.scss';
 
 .st-UserAvatar {
-	.st-Image,
+	.st-Image-container,
 	.badge {
 		width: 40px;
 		height: 40px;
