--- a/src/components/widgets/image/Image.scss
+++ b/src/components/widgets/image/Image.scss
@@ -2,6 +2,32 @@
 @import 'styles/themes/mixins.scss';
 
 .st-Image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	&-container {
+		position: relative;
+		overflow: hidden;
+		background: rgba(0, 0, 0, 0.05);
+		display: block;
+		height: 100%;
+	}
+
+	&-thumb {
+		filter: blur(20px);
+		transition: visibility 0ms ease 400ms;
+		visibility: visible;
+		object-fit: contain;
+		padding: 20px;
+	}
+
+	&-full {
+		transition: opacity 400ms ease 0ms;
+	}
+
 	&-fallback {
 		display: flex;
 		position: relative;
