--- a/src/views/stories/StoryItem.scss
+++ b/src/views/stories/StoryItem.scss
@@ -47,7 +47,7 @@
 		padding: 15px;
 
 		.st-UserAvatar {
-			.st-Image,
+			.st-Image-container,
 			.badge {
 				margin-right: 16px;
 			}
@@ -210,7 +210,7 @@
 		@include theme-aware('color', 'story-item-username-color');
 
 		.st-UserAvatar {
-			.st-Image,
+			.st-Image-container,
 			.badge {
 				margin-right: 16px;
 			}
